--- a/MATH/MATH.csproj
+++ b/MATH/MATH.csproj
@@ -80,6 +80,9 @@
     <Compile Include="Gui\Calc\StandardDeviation.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Gui\Calc\Variance.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Gui\ListInputForm.cs">
       <SubType>Form</SubType>
     </Compile>
