--- a/MATH/MATH.csproj
+++ b/MATH/MATH.csproj
@@ -77,6 +77,9 @@
     <Compile Include="Gui\Calc\NormalDistribution.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Gui\Calc\ProbabilityDistribution.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Gui\Calc\StandardDeviation.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -104,6 +107,7 @@
     <Compile Include="MATH.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Util\MMath.cs" />
+    <Compile Include="Util\Predicate.cs" />
     <EmbeddedResource Include="Gui\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
