--- a/MATH/MATH.csproj
+++ b/MATH/MATH.csproj
@@ -53,10 +53,16 @@
     <Compile Include="Gui\Calc\AnnuityPayout.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="Gui\Calc\BinomialDistribution.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="Gui\Calc\CentralTendency.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Gui\Calc\ExponentialGrowth.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Gui\Calc\GeometricDistribution.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Gui\Calc\InterestCompound.cs">
@@ -75,6 +81,9 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Gui\Calc\NormalDistribution.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Gui\Calc\PoissonDistribution.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Gui\Calc\ProbabilityDistribution.cs">
